src/test/deca/context/valid/Objet/assign_empty_class.deca
// Description:
//    test d'affectation d'une classe vide
//
// Resultats:
//   
//
// Historique:
//    cree le 18/01/2022

class A {
    //classe vide 
}

{
    A a = new A();
}